--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,6 @@ phases:
 
   post_build:
     commands:
-      - curl -s https://raw.githubusercontent.com/anchore/ci-tools/master/scripts/inline_scan | bash -s -- ${IMAGE_NAME}:$IMAGE_TAG
+      - curl -s https://ci-tools.anchore.io/inline_scan-v0.3.3 | bash -s -- ${IMAGE_NAME}:$IMAGE_TAG
       - echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
       - docker push $IMAGE_NAME:$IMAGE_TAG
