--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
 
 container_build:
   stage: build
-  image: docker:stable-git
+  image: docker:stable
   services:
   - docker:stable-dind
 
@@ -19,8 +19,20 @@ container_build:
   - echo "$CI_JOB_TOKEN" | docker login -u gitlab-ci-token --password-stdin "${CI_REGISTRY}"
   - docker build -t "$IMAGE_NAME" .
   - apk add bash curl 
-  - curl -s "https://raw.githubusercontent.com/anchore/ci-tools/master/scripts/inline_scan" | bash -s -- -r -t 500 "$IMAGE_NAME"
+  - curl -s https://ci-tools.anchore.io/inline_scan-v0.3.3 | bash -s -- -r -t 500 "$IMAGE_NAME"
   - docker push "$IMAGE_NAME"
+  - |
+      echo "Parsing anchore reports."
+      for f in anchore-reports/*; do
+        if [[ "$f" =~ "content-os" ]]; then
+          printf "\n%s\n" "The following OS packages are installed on ${IMAGE_NAME}:"
+          jq '[.content | sort_by(.package) | .[] | {package: .package, version: .version}]' $f || true
+        fi
+        if [[ "$f" =~ "vuln" ]]; then
+          printf "\n%s\n" "The following vulnerabilities were found on ${IMAGE_NAME}:"
+          jq '[.vulnerabilities | group_by(.package) | .[] | {package: .[0].package, vuln: [.[].vuln]}]' $f || true
+        fi
+      done
 
   artifacts:
     name: ${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}
@@ -47,30 +59,6 @@ container_scan_service:
     name: ${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}
     paths:
     - anchore-reports/*
-
-anchore_reports:
-  stage: publish
-  image: alpine:latest
-  dependencies:
-  - container_build
-
-  variables:
-    GIT_STRATEGY: none
-
-  script:
-  - apk add jq
-  - |
-      echo "Parsing anchore reports."
-      for f in anchore-reports/*; do
-        if [[ "$f" =~ "content-os" ]]; then
-          printf "\n%s\n" "The following OS packages are installed on ${IMAGE_NAME}:"
-          jq '[.content | sort_by(.package) | .[] | {package: .package, version: .version}]' anchore-reports/image-content-os-report.json || true
-        fi
-        if [[ "$f" =~ "vuln" ]]; then
-          printf "\n%s\n" "The following vulnerabilites were found on ${IMAGE_NAME}:"
-          jq '[.vulnerabilities | group_by(.package) | .[] | {package: .[0].package, vuln: [.[].vuln]}]' anchore-reports/image-vuln-report.json || true
-        fi
-      done
 
 container_publish:
   stage: publish
